[build-system]
requires = ["uv_build >= 0.9.28"]
build-backend = "uv_build"

[project]
name = "security-tools"
description = "Security tools"
authors = [{name = "mikle-green"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10.0"
dependencies = []
dynamic = ["version"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "FBT", "EM101", "TRY003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "PT011"]
