[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "security-toolbox"
description = "Security tools"
authors = [{name = "mikle-green"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
source = "versioningit"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D", "FBT", "EM101", "TRY003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "PT011"]
