[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "security-toolbox"
description = "Security tools"
authors = [{name = "mikle-green"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]
keywords = ["security", "password"]

[project.urls]
repository = "https://github.com/mikle-green/security-tools"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.sdist]
packages = ["security_tools"]

[tool.hatch.build.targets.wheel]
packages = ["security_tools"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D", "FBT", "EM101", "TRY003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "PT011"]
